Saving new entry 2020-10-28-15-34-30

--- a/gh-weblog-2/content/posts/markdown/2020-10-28-15-34-30.md
+++ b/gh-weblog-2/content/posts/markdown/2020-10-28-15-34-30.md
@@ -2,4 +2,9 @@ I needed to install Windows 7 on an old Shuttle computer, for which win10 would 
 
 Burn the ISO to a USB stick, which can thankfully be any old 4GB stick because windows 7, unlike 10, never grew past 3.5GB as base install (I use [Win32 Disk Imager](https://sourceforge.net/projects/win32diskimager/), which can "burn" `.iso` files just fine, but you do need to file type filter for all file types, because it'll filter just for `.img` files), then boot off of said USB stick.
 
-Once up and running, you start Windows Update (start → "all programs" → windows update) and then you go through the "install updates, reboot, install more updates, reboot, etc. etc." motions. Until you hit update
+Once up and running, you start Windows Update (start → "all programs" → windows update) and then you go through the "install updates, reboot, install more updates, reboot, etc. etc." motions. Until you hit update `kb4516065`, which will fail with an error code 80092004 that has no article to explain what it means, and seemingly has no way to get past.
+
+Thankfully, the advice in [this post](https://answers.microsoft.com/en-us/windows/forum/windows_7-update/kb4516065-installation-fails-with-error-80092004/ef9994ee-7820-436e-b18f-001ae53edf28) works: 
+
+1. download and manually install [kb4490628](https://www.catalog.update.microsoft.com/search.aspx?q=kb4490628)
+2. then download and manually install
