Saving new entry 2020-10-28-15-34-30

--- a/gh-weblog-2/content/posts/markdown/2020-10-28-15-34-30.md
+++ b/gh-weblog-2/content/posts/markdown/2020-10-28-15-34-30.md
@@ -7,4 +7,8 @@ Once up and running, you start Windows Update (start → "all programs" → wind
 Thankfully, the advice in [this post](https://answers.microsoft.com/en-us/windows/forum/windows_7-update/kb4516065-installation-fails-with-error-80092004/ef9994ee-7820-436e-b18f-001ae53edf28) works: 
 
 1. download and manually install [kb4490628](https://www.catalog.update.microsoft.com/search.aspx?q=kb4490628)
-2. then download and manually install
+2. then download and manually install [kb4516065](https://www.catalog.update.microsoft.com/Search.aspx?q=kb4516065)
+
+Once done, windows update can get back to the "install updates, reboot, install more updates, reboot, etc" dance and all is well.
+
+I mean, except for the part where you'll never receive security etc updates ever again, so once you're done installing everything, you _prooobably_ want to either air gap or network-restrict the machine so it can't reach, or be reached from, the internet. Which is exactly what I need (it just needs to accept audio feeds from a set of microphones that it can then forward on over LAN, no internet required) so happens to be fine for my use-case.
