--- a/gh-weblog-2/content/posts/markdown/2020-10-28-15-34-30.md
+++ b/gh-weblog-2/content/posts/markdown/2020-10-28-15-34-30.md
@@ -1,4 +1,4 @@
-I needed to install Windows 7 on an old Shuttle computer, for which win10 would be too much of a constant load on the system, and into an interesting problem. For the most part, installation is fine: get the official ISO from Microsoft on their [dedicated software download page](https://www.microsoft.com/en-ca/software-download/windows7), which requires supplying your windows 7 key (conveniently a sticker on the inside of the Shuttle case. Inconveniently, a sticker you can't remove and put in an organizer that has all your software keys).
+I needed to install Windows 7 on an old Shuttle computer, for which win10 would be too much of a constant load on the system (it's a completely passive system, and a constant 30% load on the cpu is very much not appreciated), and ran into an interesting problem. For the most part, installation is fine: get the official ISO from Microsoft on their [dedicated software download page](https://www.microsoft.com/en-ca/software-download/windows7), which requires supplying your windows 7 key (conveniently a sticker on the inside of the Shuttle case. Inconveniently, a sticker you can't remove and put in an organizer that has all your software keys).
 
 Burn the ISO to a USB stick, which can thankfully be any old 4GB stick because windows 7, unlike 10, never grew past 3.5GB as base install (I use [Win32 Disk Imager](https://sourceforge.net/projects/win32diskimager/), which can "burn" `.iso` files just fine, but you do need to file type filter for all file types, because it'll filter just for `.img` files), then boot off of said USB stick.
 
