--- a/gh-weblog-2/content/posts/markdown/2021-02-27-21-37-55.md
+++ b/gh-weblog-2/content/posts/markdown/2021-02-27-21-37-55.md
@@ -1,8 +1,8 @@
 Yours and everyone else's: there are two things you *need* to do.
 
-1. Reset your nvram by restarting macos and holding `Command+Option+P+R`: hold all four keys down at the same time while your mac boots, and you'll know it worked when you hear the mac chime. It'll autoreboot after resetting the nvram but just keep those keys pressed until you hear the chime a second time, just for good measure.
+1. Reset your nvram (which is a hardware cache that includes SSD information. If you don't reset it, macos is going to apply the old SSD's information to your new SSD, and you're going to have a bad time. Restarting macos whie  holding `Command+Option+P+R` (all four keys at the same time) untill you hear the mac chime. You won't _see_ anything, it'll just be a black screen, not an apple logo, so if you don't hear that chime, boot into macos regulary, make sure your audio's not muted, and retry.
 
-2. Disable macos' drive standby, because your SSD is almost certainly incompatible with the apple hardware instructions. Open a terminal and run:
+2. Disable macos' drive standby, because your SSD is almost certainly incompatible with the apple hardware instructions. After booting into macos after resetting the nvram, open a terminal and run:
 
 ```
 $ sudo pmset -a standby 0 
