Saving new entry 2021-04-08-19-06-28

--- a/gh-weblog-2/content/posts/markdown/2021-04-08-19-06-28.md
+++ b/gh-weblog-2/content/posts/markdown/2021-04-08-19-06-28.md
@@ -48,11 +48,11 @@ What it _does_ say is that if you are writing python code today, whether that's 
 
 ## In conclusion
 
-**If your software still relies on Python 2.7** , meaning your software that you still work on with the intention of having others make use of it, in 2021, that is written in python 2.7, then
+**If your software still relies on Python 2.7** , meaning that in 2021, your software that you still work on with the intention of having others make use of it, then
 
-**your software is bad** because you are forcing people either into using, or keeping people locked into using, a dead technology that has known security exploits that are only going to increase in number, and
+**your software is bad** because it forces people into using dead technology that has known security exploits, and
 
-**you should feel bad**.
+**you should feel bad** and do something about that.
 
 Go archive your 2.7 release as the last 2.7 release you'll ever do, run 2to3 on your code, and start a new release set for 3.x because that's the safe version of Python that people should be using these days.
 
