Saving new entry 2021-04-08-19-06-28

--- a/gh-weblog-2/content/posts/markdown/2021-04-08-19-06-28.md
+++ b/gh-weblog-2/content/posts/markdown/2021-04-08-19-06-28.md
@@ -52,7 +52,7 @@ What it _does_ say is that if you are writing python code today, whether that's 
 
 **your software is bad** because it forces people into using dead technology that has known security exploits, and
 
-**you should feel bad** and do something about that.
+**you should feel bad** and you should address that.
 
 Go archive your 2.7 release as the last 2.7 release you'll ever do, run 2to3 on your code, and start a new release set for 3.x because that's the safe version of Python that people should be using these days.
 
