Saving new entry 2021-04-08-19-06-28

--- a/gh-weblog-2/content/posts/markdown/2021-04-08-19-06-28.md
+++ b/gh-weblog-2/content/posts/markdown/2021-04-08-19-06-28.md
@@ -20,7 +20,7 @@ Let's do one more.
 
 > If your software still relies on Java 1.4 in 2021, your software is bad and you should feel bad.
 
-You get the point by now. Sure, there is code that got _released when Java 1.4 was current_ and did great things but if that code is still being maintained or worked on (not, "if that code is still being used", but if that code is still actively maintained, and has new releases pushed out) then that code should have been uplifted _several times_ over the last two decades.
+You get the point by now. Sure, there is code that got _released when Java 1.4 was current_ and did great things but if that code is still being maintained or worked on (not, "if that code is still being used", but if that code is still actively maintained, and has new releases pushed out, requiring Java 1.4) then that code should have been uplifted _several times_ over the last two decades.
 
 
 
