Saving new entry 2021-12-06-18-37-40

--- a/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
+++ b/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
@@ -23,7 +23,8 @@ function routHandlers(request, response) {
   // ...
 }
 
-const server = (useHTTPS ? https : http).createServer(useHTTPS ? httpsOptions : undefined, routHandlers);
+const namespace = (useHTTPS ? https : http);
+const server = namespace.createServer(useHTTPS ? httpsOptions : undefined, routHandlers);
 
 server.listen(port, () => {
   console.log(`Server is listening on ${protocl}//${domain}:${port}`);
