--- a/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
+++ b/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
@@ -8,7 +8,7 @@ import https from "https";
 
 const useHTTPS = process.env.USE_HTTPS === `true`;
 const protocol = useHTTPS ? `https` : `http`;
-const domain = process.env.USE_DOMAIN || `localhost`;
+const domain = process.env.DOMAIN_NAME || `localhost`;
 const port = parseInt(process.env.PORT) || 8000;
 
 const httpsOptions = {};
