--- a/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
+++ b/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
@@ -6,10 +6,11 @@ Which means I needed to set up HTTPs/SSL in a way that works for all these thing
 import http from "http";
 import https from "https";
 
-const useHTTPS = process.env.USE_HTTPS === `true`;
+const { USE_HTTPS, DOMAIN_NAME, PORT } = process.env;
+const useHTTPS = USE_HTTPS === `true`;
 const protocol = useHTTPS ? `https` : `http`;
-const domain = process.env.DOMAIN_NAME || `localhost`;
-const port = parseInt(process.env.PORT) || 8000;
+const domain = DOMAIN_NAME || `localhost`;
+const port = parseInt(PORT) || 8000;
 
 const httpsOptions = {};
 
