Saving new entry 2021-12-06-18-37-40

--- a/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
+++ b/gh-weblog-2/content/posts/markdown/2021-12-06-18-37-40.md
@@ -1,4 +1,4 @@
-I'm working on a server-client-thinclient project where there is a single server, running an HTTPS and WS server process, with clients that first connect to the web server "Front door" before being sent on to their own dedicated websocket URL. These clients are just "computer programs" that someone can attach to with their browser, so each client also runs its own little websocket server. At some point, the idea is of course that the server runs on one machine, and clients run on however-many secondary machines, but for testing purposes that makes no sense: the server and clients all run on the same hardware.
+I'm working on a server -client-thinclient project where there is a single server, running an HTTPS and WS server process, with clients that first connect to the web server "Front door" before being sent on to their own dedicated websocket URL. These clients are just "computer programs" that someone can attach to with their browser, so each client also runs its own little websocket server. At some point, the idea is of course that the server runs on one machine, and clients run on however-many secondary machines, but for testing purposes that makes no sense: the server and clients all run on the same hardware.
 
 Which means I needed to set up HTTPs/SSL in a way that works for all these things, and thankfully it turns out that Node.js allows you to do this pretty easily. It even has [example code for this](https://nodejs.org/api/https.html#httpscreateserveroptions-requestlistener) on the API pages for the `https` module, which can be used in combination with a Let's Encrypt [certbot]() key and certificate, and some env vars to regulate whether to use https or not:
 
