Saving new entry 2022-02-27-20-44-47

--- a/gh-weblog-2/content/posts/markdown/2022-02-27-20-44-47.md
+++ b/gh-weblog-2/content/posts/markdown/2022-02-27-20-44-47.md
@@ -1,3 +1,39 @@
 We use [Wagtail](https://wagtail.org/), a Django-based CMS, at the Mozilla Foundation to host https://foundation.mozilla.org, as well as http://donate.mozilla.org, and as nice as Django is, it is pretty terrible at migration and app management. The official stance is "you shouldn't worry about how many migrations you have", and for a base Django installation, that might very well be true.
 
-For Wagtail installations, it very much isn't. Thanks to Wagtail's [streamfield](https://docs.wagtail.org/en/stable/topics/streamfield.html) concept, which models free-form page body content "out of band" (using a single huge JSON string for each stream, rather than linked table data) you can end up with migrations where your code change may have been a short string update, but the migration for that updates the _entire_ streamfield definition JSON. As in,
+For Wagtail installations, it very much isn't. Thanks to Wagtail's [streamfield](https://docs.wagtail.org/en/stable/topics/streamfield.html) concept, which models free-form page body content "out of band" (using a single huge JSON string for each stream, rather than linked table data) you can end up with migrations where your code change may have been a short string update, but the migration for that updates the _entire_ streamfield definition JSON. A four letter change in your code can easily lead to a 12kb change in a migration field. Times every model that uses that same streamfield definition. 50kb+ migrations for tiny code changes are not unusual.
+
+So, when you use Wagtail you will almost certain run into the need to squash your migrations much sooner than you ever would if you just used plain Django, and we've had to do this enough times that it's really worth just writing down how to properly do this. So here's a checklist for you to run through:
+
+1. Use `squashmigration` to first extremely-poorly-consolidate all your wagtail app's migrations: `python manage.py squashmigrations yourappname 1234` (where 1234 is your most recent migration number). This will create a new `0001` migration that is almost certainly not going to work without further editing because squashing does not automatically copy over any of your "run this during a migration" code. So we'll need to create a new migration file for that:
+1. Create a new migration file 0002 with a dependency on the new 0001, exclusively for data bootstrapping. Note that you do _not_ need any of the code that migrated data "between migrations": when squashing your migrations, all your model definitions and data are already up to date with respect to your current code, meaning that none of the migration functions that you had to run in the past to uplift older data to a newer form is relevant anymore. However, migration functions that _create_ data should all be put in your new 0002 migration. With, of course, the code updated to do what it's supposed to do given your _current_ code.  And of course, remember to remove all the `runPython` instructions from the new 0001 migration
+1. After testing (of course), push these changes all the way through to production. 
+1. We can now remove the old migrations: delete everything except the new 0001 and 0002, and make sure to update 0001 so that it no longer claims that it `replaces = ...`, as those migration files will no longer exist.
+1. After testing (of course), again push these changes all the way through to production. 
+1. We can now perform the part that we wanted from the start: move the newly created `0001` and `0002` migration files to a temp dir so that the `migrations` dir is empty, and run `python manage.py makemigrations` to create _completely new, fresh, clean, model definitions_. Django is pretty terrible at migration optimization (which isn't its fault: that's a hard problem), and this step basically goes "okay, we know the model definitions are a single migration, so a completely new migration will lead to the same model definitions getting set up". Except without needing to optimize anything: you're quite likely to end up with a migration that is 10x smaller than the original squashed migration Django created.
+1. Make sure this newest 0001 migration has some name that is unique to when you're doing the work. E.g. `0001_2022_02_24_reset_models.py`, and copy the original squash migration `0001` and data bootstrap `0002` that we moved to a temp dir back into the `migrations` dir. Update the super clean migration so that it has a `replaces = ...`  list, and have that list be the squashed 0001 and data bootstrap 0002 names.
+1. Copy the 0002 data bootstrap migration as a new 0002 file with the same kind of name as our super clean migration, e.g. `0002_2022_02_24_reset_data_bootstrap.py` and update its `dependencies` field to point to `0001_2022_02_24_reset_models`.
+1. After testing (of course), we push these changes all the way through to production for a third time. We are not done yet.
+1. We can now delete the original squash migration and its data bootstrap migration, and remove the `replaces` field from our super clean 0001 migration.
+1. After testing (yet again), we push these changes all the way through to production for the last time.
+
+Congratulations, you probably just cut your `python manage.py migrate` runtime in half, if not more. 
+
+But we're not done, because Django doesn't actually _know_ what we've done: its migration table still contains all the old migration information despite those files no longer existing, so we're going to have to go into the DB and update that part, too.  First off, connect to your production database, and run:
+
+```
+> SELECT FROM django_migrations WHERE app = 'your_app_name';
+```
+
+This will show you all the migrations the django has ever see for your app. All but two of those are completely irrelevant now, so we're going to remove them. Take note of the `id` for the new clean migration and its data bootstrap migration, and then run:
+
+```
+> DELETE FROM django_migrations WHERE app = 'your_app_name' AND id < 1234567;
+```
+
+Where that `1234567` is the lower of the two id numbers for your clean migrations.
+
+However, remember to **always have database backups** before you do something like this. 
+
+Also note, that this **will cause problems** if you have multiple apps that have migration cross dependencies to your just-cleaned-up app. You will need to run this clean-squash procedure for _every_ app with dependencies on any of the apps you're cleaning this way, before you can clean up the `django_migrations` table.
+
+And yeah: it's absolutely crazy that Django's been around for over fifteen years, but no one's really bothered to actually make this part easy. And don't even get me started on renaming a Django app. Heaven forbid you'd ever want to do that.
