Saving new entry 2020-04-14-22-59-29

--- a/gh-weblog-2/content/posts/markdown/2020-04-14-22-59-29.md
+++ b/gh-weblog-2/content/posts/markdown/2020-04-14-22-59-29.md
@@ -4,7 +4,7 @@ In a bizarre happenstance, I rebooted my Windows 10 workstation after doing noth
 
 Now, if you Google for this error, you will get a million click-bait articles, and a handful of real posts that tell you to uninstall the device in Device Manager, and then reboot - and of course, that does nothing.
 
-Then some of them tell you to regedit your way to success by deleting the `LowerFilters` and `UpperFilters` keys in the HKEY_LOCAL_MACHINE >  System > CurrentControlSet > Control > Class > ... entry, which is invariable for CD-ROM or DVD drives, and that of course does nothing because those are not your problem.
+Then some of them tell you to regedit your way to success by deleting the `LowerFilters` and `UpperFilters` keys in the HKEY_LOCAL_MACHINE >  System > CurrentControlSet > Control > Class > ... entry, which is invariably for CD-ROM or DVD drives, and that of course does nothing because those are not your problem.
 
 Instead, you need to open HKEY_LOCAL_MACHINE >  System > CurrentControlSet > Control > Class, and then simply step through the entries until you find the `USB` entry. In my case, that was `{36fc9e60-c465-11cf-8056-444553540000}` rather than one of the million `{4d36e9xx-e325-11ce-bfc1-xxxxxx}` keys that people tell you to use.
 
