Saving new entry 2022-07-10-15-35-00

--- a/gh-weblog-2/content/posts/markdown/2022-07-10-15-35-00.md
+++ b/gh-weblog-2/content/posts/markdown/2022-07-10-15-35-00.md
@@ -4,7 +4,9 @@ React has had a fairly profound effect on the web, whether you like React or not
 
 Imagine this: you wrote a React app that has a status and a whole bunch of different content, and you need to make sure your status bar reflects whatever is active right now. So you add a ref to your status bar, communicate that up to the parent `App`, which can then pass down a handler to every component until it makes it down into your components that can be active.
 
-Or, you go "oh right, wait, I'm in a browser" and you just use events: your active component just fires-and-forgets a `document.dispatchEvent(new CustomEvent(`status:active`, { detail: ... }))` and your status bar registers a listener for that event when it mounts. We are done: nothing needs to run up and down an entire virtual DOM tree. And because this is basically just utility functionality, we write it as its own function that any component that needs to update the status bar can use, which we can import _from_ the Status bar:
+Or, you go "oh right, wait, I'm in a browser" and you just use events: your active component just fires-and-forgets a ```
+document.dispatchEvent(new CustomEvent(`status:active`, { detail: ... }))
+``` and your status bar registers a listener for that event when it mounts. We are done: nothing needs to run up and down an entire virtual DOM tree. And because this is basically just utility functionality, we write it as its own function that any component that needs to update the status bar can use, which we can import _from_ the Status bar:
 
 ```
 // The only code that cares about this event name is the code
