Saving new entry 2022-12-25-19-07-23

--- a/gh-weblog-2/content/posts/markdown/2022-12-25-19-07-23.md
+++ b/gh-weblog-2/content/posts/markdown/2022-12-25-19-07-23.md
@@ -46,6 +46,11 @@ class Brrrrrr():
         self.description = "I'm a plane!"
         self.orientation = Orientation()
         self.trim = Trim()
+
+    def trim(self, e=0, a=0, r=0):
+        self.trim.elevator += e
+        self.trim.aileron += a
+        self.trim.rudder += r
 ```
 
 Done.
