--- a/gh-weblog-2/content/posts/markdown/2022-12-25-19-07-23.md
+++ b/gh-weblog-2/content/posts/markdown/2022-12-25-19-07-23.md
@@ -1,27 +1,31 @@
 Python does not have syntax for writing C structs, or things that act like them, but thankfully you can write a class decorator that adds something that feels like it should have been in the language from day one.
 
 ```
-def as_struct(struct_class):
-	# create a new init
-	def struct_init(self, *args):
-		i = 0 # we really don't need enumerate here...
-		for value in list(args):
-			name = field_names[i]
-			default_value = field_values[i]
-			setattr(self, name, value if value is not None else default_value)
-			i += 1 # ...we just need to inc an int
-	# extract the struct fields
-	field_names = []
-	field_values = []
-	for attr_name in dir(struct_class):
-		if not attr_name.startswith('_'):
-			value = getattr(struct_class, attr_name)
-			if not callable(value):
-				field_names.append(attr_name)
-				field_values.append(value)
-	# rebind and return
-	struct_class.__init__ = struct_init
-	return struct_class
+def struct(struct_class):
+    # create a new init
+    def struct_init(self, *args, **kwargs):
+        i = 0 # we really don't need enumerate() here...
+        for value in args:
+            name = member_names[i]
+            default_value = member_values[i]
+            setattr(self, name, value if value is not None else default_value)
+            i += 1 # ...we just need to inc an int
+        for key,value in kwargs.items():
+            i = member_names.index(key)
+            default_value = member_values[i]
+            setattr(self, key, value if value is not None else default_value)
+    # extract the struct members
+    member_names = []
+    member_values = []
+    for attr_name in dir(struct_class):
+        if not attr_name.startswith('_'):
+            value = getattr(struct_class, attr_name)
+            if not callable(value):
+                member_names.append(attr_name)
+                member_values.append(value)
+    # rebind and return
+    struct_class.init = struct_init
+    return struct_class
 ```
 
 With this, we can write code with nice Struct-likes:
