Saving new entry 2022-12-25-19-07-23

--- a/gh-weblog-2/content/posts/markdown/2022-12-25-19-07-23.md
+++ b/gh-weblog-2/content/posts/markdown/2022-12-25-19-07-23.md
@@ -31,15 +31,15 @@ def struct(struct_class):
 With this, we can write code with nice Struct-likes:
 
 ```
-from as_struct import as_struct
+from as_struct import struct
 
-@as_struct
+@struct
 class Orientation():
     pitch = 0
     roll = 0
     yaw = 0
 
-@as_struct
+@struct
 class Trim():
     elevator = 0
     aileron = 0
