Saving new entry 2023-02-15-04-13-34

--- a/gh-weblog-2/content/posts/markdown/2023-02-15-04-13-34.md
+++ b/gh-weblog-2/content/posts/markdown/2023-02-15-04-13-34.md
@@ -1,11 +1,13 @@
 Ever had your external SSD refuse to remount when you plug it into MacOS because it's an idiotic OS and remembers you didn't properly ejected it?
 
-First, kill `fsck` because it's ruining the party right now:
+First, kill `fsck` (the "file system consistency check" with the dumbest command name) because it's ruining the party right now:
 
 ```
 $ ps aux | grep fsck
 ```
-find the process id and `sudo kill -9 thatid` because goddamnit, fsck, stop ruining the party. Then, simply remount your drive:
+Find the process id and `sudo kill -9 thatid` because goddamnit, fsck, stop ruining the party. It's even going to do a fake out, because there's probably two pids, and only one of them is real. The other's a zombie process.
+
+With the main one killed, we can remount the drive:
 
 ```
 $ diskutils mount /Volumes/disk3s2
