Saving new entry 2023-03-07-16-36-07

--- a/gh-weblog-2/content/posts/markdown/2023-03-07-16-36-07.md
+++ b/gh-weblog-2/content/posts/markdown/2023-03-07-16-36-07.md
@@ -6,7 +6,9 @@ Turns out there is, or rather, there are. I ended up using [gdal-async](https://
 
 I ended up writing out the file index to a 24000 line JSON file as a cache, hoping that'd be faster, and where it takes Python a bit to run through that, Node.js loads that instantly. _And_ parses it to a JS datastructure. The server's just up the moment I run `node server.js` instead of spending a second or two starting up. 
 
-But it gets better: why am I using GDAL at all if all I want is the elevations for GPS coordinates? Surely, GeoTIFF is not so complex that only giant GIS projects can make sense of them? And it turns out that, no, it's not. It's in fact near-trivial to write your own code for this provided you know a little bit of programming: GeoTIFF put all the information you need in the "fields" section of an IFD block (the kind of blocks a TIFF file is built up from), so we can just use [a tiff parser](https://www.npmjs.com/package/tiff) to get those fields, and then look up what values we need in order to map GPS coordinates to TIFF pixel indices.
+But it gets better: why am I using GDAL at all if all I want is the elevations for GPS coordinates? Surely, GeoTIFF is not so complex that only giant GIS projects can make sense of them? And it turns out that, no, it's not. It's in fact near-trivial to write your own code for this provided you know a little bit of programming: GeoTIFF put all the information you need in the "fields" section of an IFD block (the kind of blocks a TIFF file is built up from), so we can just use [a tiff parser](https://www.npmjs.com/package/tiff) to get those fields, and then look up what values we need in order to map GPS coordinates to TIFF pixel indices (See https://stackoverflow.com/a/75647596/740553 for an overly detailed explanation on the how!)
+
+So, how much code is it when we implement the entire thing, bar the TIFF parser, ourselves? This much code:
 
 ```javascript
 import tiff from "tiff";
