Saving new entry 2023-03-07-16-36-07

--- a/gh-weblog-2/content/posts/markdown/2023-03-07-16-36-07.md
+++ b/gh-weblog-2/content/posts/markdown/2023-03-07-16-36-07.md
@@ -11,7 +11,15 @@ But it gets better: why am I using GDAL at all if all I want is the elevations f
 So, how much code is it when we implement the entire thing, bar the TIFF parser, ourselves? This much code:
 
 ```javascript
+import { existsSync, copyFileSync, readFileSync, writeFileSync } from "fs";
+import { basename, join } from "path";
 import tiff from "tiff";
+const { floor, ceil } = Math;
+
+const __dirname = url.fileURLToPath(new URL(".", import.meta.url));
+const INDEX_FILE = join(__dirname, `alos-index.json`);
+const CACHE_DIR = join(__dirname, `cache`);
+const ALOS_VOID_VALUE = -9999;
 
 class ALOSTile {
   constructor(tilePath) {
@@ -40,7 +48,7 @@ class ALOSTile {
     const y = T[3] + T[4] * long + T[5] * lat;
     const pos = (x | 0) + (y | 0) * block.width;
     const value = this.pixels[pos];
-    return value ?? -9999;
+    return value ?? ALOS_VOID_VALUE;
   }
 }
 ```
