Saving new entry 2023-04-26-20-51-12

--- a/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
@@ -1,4 +1,8 @@
-Have you ever needed a 3D cube LUT, and so you whipped out Photoshop, created a bunch of adjustment layers, exported the color information as a LUT, only for the result to look like this?
+Have you ever needed a 3D cube LUT, and so you whipped out Photoshop, and created a bunch of adjustment layers for your colour correction...
+
+![image](https://user-images.githubusercontent.com/177243/235992202-f9203283-9437-4c28-95f8-70555804c527.png)
+
+And then when you went to export the adjustment layers to a LUT, the LUT made things look like this?
 
 ![{C9DE6C3A-EC6B-492A-A830-9B29F1A70590}](https://user-images.githubusercontent.com/177243/234699746-5c492161-e373-4e57-b4fb-a43c7a7c4d42.png)
 
