Saving new entry 2023-04-26-20-51-12

--- a/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
@@ -6,7 +6,7 @@ And then when you went to export the adjustment layers to a LUT, the LUT made th
 
 ![{C9DE6C3A-EC6B-492A-A830-9B29F1A70590}](https://user-images.githubusercontent.com/177243/234699746-5c492161-e373-4e57-b4fb-a43c7a7c4d42.png)
 
-The problem you're seeing is caused by having multiple image layers:
+The problem you're seeing is almost certainly caused by having multiple image layers under your adjustment layer(s):
 
 ![image](https://user-images.githubusercontent.com/177243/234700423-866d74a7-a68a-4c0a-a81d-feea987a42f3.png)
 
