Saving new entry 2023-04-26-20-51-12

--- a/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
@@ -2,7 +2,7 @@ Have you ever needed a 3D cube LUT? Turns out, all you need is Photoshop! Whip o
 
 ![image](https://user-images.githubusercontent.com/177243/235992202-f9203283-9437-4c28-95f8-70555804c527.png)
 
-And then export that to a LUT using "export" -> "Color Lookup Tables..." with only ".cube" as format and 32 points. Brilliant, instance 33 point 3d LUT for use in OBS, your video monitor, a LUT box, etc. etc.!
+And then export that to a LUT using "export" -> "Color Lookup Tables..." with only ".cube" as format and 32 points. Brilliant: instant 33 point 3d LUT for use in OBS, your video monitor,  in-camera, through a LUT box, etc. etc.!
 
 But then you load it into OBS, or your LUT box, and your video feed suddenly looks like this:
 
