Saving new entry 2023-04-26-20-51-12

--- a/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
@@ -1,4 +1,4 @@
-Have you ever needed a 3D cube LUT? Turns out, all you need is Photoshop! Whip out Photoshop, and created a bunch of "adjustment layers" for your colour correction...
+Have you ever needed a 3D cube LUT? Turns out, all you need is Photoshop! Whip out Photoshop and create a bunch of "adjustment layers" for your colour correction...
 
 ![image](https://user-images.githubusercontent.com/177243/235992202-f9203283-9437-4c28-95f8-70555804c527.png)
 
