--- a/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-26-20-51-12.md
@@ -4,7 +4,7 @@ Have you ever needed a 3D cube LUT? Turns out, all you need is Photoshop! Whip o
 
 And then export that to a LUT using "export" -> "Color Lookup Tables..." with only "CUBE" as format and 32 points. Brilliant: instant 33 point 3d LUT for use in OBS, your video monitor,  in-camera, through a LUT box, etc. etc.!
 
-But then you load it into OBS, or your LUT box, and your video feed suddenly looks like this:
+But then you load it into OBS, or your LUT box, and oh no your video feed suddenly looks like this:
 
 ![{C9DE6C3A-EC6B-492A-A830-9B29F1A70590}](https://user-images.githubusercontent.com/177243/234699746-5c492161-e373-4e57-b4fb-a43c7a7c4d42.png)
 
